# lifedb-server

./: .gitignore  .hgignore  Makefile  Makefile.forktest  Makefile.in  Makefile.lifesql  Makefile.macostest  Makefile.passwords  Makefile.schema.in  OCamlMakefile  README  TODO  config.h.in  config.json  config.json.in  configure  configure.ac  custom_unix_stubs.c  db_thread.ml  db_thread_access.ml  fork_helper.ml  forktest.ml  http_server.ml  index.html  keychain_schema.ml  keychain_schema.mli  lifedb_cache.ml  lifedb_config.ml  lifedb_dispatch.ml  lifedb_filter.ml  lifedb_out_tasks.ml  lifedb_passwd.ml  lifedb_plugin.ml  lifedb_query.ml  lifedb_rpc.ml  lifedb_schema.ml  lifedb_schema.mli  lifedb_schema_generator.ml  lifedb_session.ml  lifedb_static.ml  (+24 more)
client/ocaml/: Makefile  Makefile.in  client.ml  lifedb.ml
client/python/: PKG-INFO  setup.py
client/python/lifedb/: client.py  passwd.py
client/python/lifedb/tests/: __init__.py  client.py
htdocs/: README  grid.css  grid.js  index.html
scripts/: get_passphrase.sh  run.sh
